--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -109,3 +109,22 @@ main {
     color: white;
     margin: 1rem;
 }
+
+.modal {
+    display: none;
+    position: fixed;
+    z-index: 1000;
+    top: 0;
+    left: 0;
+    height: 100%;
+    width: 100%;
+    background: rgba(255, 255, 255, 0) url("http://i.stack.imgur.com/FhHRx.gif") 50% 50% no-repeat;
+}
+
+#right-side-col.loading .modal {
+    overflow: hidden;
+}
+
+#right-side-col.loading .modal {
+    display: block;
+}
