--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -110,7 +110,7 @@ main {
     margin: 1rem;
 }
 
-.modal {
+.modal-load-circle {
     display: none;
     position: fixed;
     z-index: 1000;
@@ -118,13 +118,13 @@ main {
     left: 0;
     height: 100%;
     width: 100%;
-    background: rgba(255, 255, 255, 0) url("http://i.stack.imgur.com/FhHRx.gif") 50% 50% no-repeat;
+    background: rgba(255, 255, 255, 0) url("../images/ajax-loader.gif") 50% 50% no-repeat;
 }
 
-#right-side-col.loading .modal {
+#right-side-col.loading .modal-load-circle {
     overflow: hidden;
 }
 
-#right-side-col.loading .modal {
+#right-side-col.loading .modal-load-circle {
     display: block;
 }
