Added beginning works of a modal to pop up when highlighting over the colored uv index text. Fixed button lining up next to city search input box.

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -55,6 +55,11 @@ main {
     margin-bottom: 15px;
 }
 
+#searchBtn {
+    margin-top: 10px;
+    margin-bottom: 15px;
+}
+
 .list-group-item:hover {
     background-color: rgb(177, 175, 175);
 }
